# syntrend

./: .gitignore  Containerfile  Dockerfile  README.md  build.containerfile  fixed_complex.schema.json  pyproject.toml  tool_requirements.txt
.github/ISSUE_TEMPLATE/: 01_bug_report.md  02_feature_request.md
.github/actions/env_setup/: action.yaml
.github/workflows/: build.yaml  test.yaml
docs/: conf.py  contributing.rst  distributions.rst  expressions.adoc  expressions.rst  faq.rst  generators.adoc  generators.md  generators.rst  generators_copy.rt  index.rst  live.py  project_file.adoc  project_file.rst  use_cases.adoc  use_cases.rst  value_distributions.adoc
docs/_diag/: distribution_graph.py
docs/source/: index.rst  use_cases.rst
event_gen/: __main__.py  load.py
event_gen/config/: __init__.py  base.py  model.py  parse.py
event_gen/generators/: __init__.py  distributions.py  filters.py  generators.py  historian.py  manager.py
event_gen/jsonschema/: core.py
event_gen/jsonschema/versions/: base.py  v2020_12.py
event_gen/utils/: build.py  formatters.py  generator.py  parse.py
syntrend/: __main__.py  cli.py  load.py
syntrend/config/: __init__.py  model.py  parse.py
syntrend/formatters/: __init__.py  ascii_table.py  csv.py  json.py  sql.py
syntrend/generators/: __base_types.py  __init__.py  choice.py  complex_object.py  datetime.py  distributions.py  float.py  generators.py  historian.py  integer.py  manager.py  names.py  static.py  string.py  uuid.py
syntrend/utils/: build.py  distributions.py  exc.py  exceptions.py  filters.py  formatters.py  generator.py  historian.py  manager.py  writers.py
tests/: conftest.py  test_load.py
tests/assets/: complex_object_2020-12.schema.json  simple_config.json  simple_config.yml  simple_object.schema.json  simple_object_2020-12.schema.json  simple_object_2020-12.schema.yaml  single_object.yml  single_value.yml  uc_cond_status_change.yaml  uc_multi_object.yaml  uc_multi_object_outputs.yaml  uc_multi_value_string.yaml  uc_num_trend.yaml  uc_random_choice.yaml  uc_seq_format_string.yaml  uc_sine_wave.yaml  uc_single_value_integer.yaml  uc_single_value_object.yaml  uc_single_value_string.yaml  uc_static_ref_events.yaml  uc_static_ref_random_start.yaml
tests/config/: test_model.py
tests/docs/: conftest.py  test_use_cases.py
tests/formatters/: conftest.py  test_ascii_table.py  test_csv.py  test_json.py  test_sql.py
tests/generators/: test_distributions.py  test_generators.py
tests/jsonschema/: test_core.py
tests/utils/: test_distributions.py  test_exceptions.py  test_filters.py  test_generator.py  test_historian.py  test_manager.py  test_parse.py
