[tool.poetry]
name = "syntrend"
version = "24.1.1"
description = ""
authors = ["Will Siddall <will.siddall@gmail.com>"]
readme = "README.md"
packages = [{include = "syntrend"}]

[tool.poetry.scripts]
syntrend = "syntrend.cli:_app"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
jinja2 = "^3.1.2"
ruamel-yaml = "^0.18.6"
faker = "^28.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.6.1"
pytest-cov = "^5.0.0"
poethepoet = "^0.28.0"

[tool.poetry.group.doc.dependencies]
sphinx = "^8.0.2"

[tool.poe.tasks]
lint-test = "ruff check"
format-test = "ruff format --check"
unit-test = "pytest -m unit"
integration-test = "pytest -m integration"
docs-test = "pytest -m docs"
coverage-test = "pytest --cov=syntrend --cov-fail-under=70"
test-report = "pytest --junit-xml=pytest-report.xml --cov=syntrend --cov-report=xml"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["W", "E4", "E7", "E9", "F", "B"]
unfixable = ["B"]

[tool.ruff.format]
quote-style = "single"  # Always preferred `blue` quoting convention over `black`
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
markers = [
    "docs",
    "unit",
    "integration",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
