[project]
name = "syntrend"
version = "0.1.0"
description = ""
authors = [
    { name = "Will Siddall", email = "will.siddall@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Traffic Generation",
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "click",
    "faker",
    "jinja2",
    "ruamel-yaml",
]

[project.urls]
Homepage = "https://syntrend.github.io/"
Repository = "https://github.com/wsidl/syntrend"
Issues = "https://github.com/wsidl/syntrend/issues"

[project.scripts]
syntrend = "syntrend.cli:app"

[tool.poe.tasks]
build = "poetry build --format=wheel"
docs = "sphinx-build docs dist"
lint-test = "ruff check"
format-test = "ruff format --check"
unit-test = "pytest -m unit"
integration-test = "pytest -m integration"
docs-test = "pytest -m docs"
coverage-test = "pytest --cov=syntrend --cov-fail-under=70"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["W", "E4", "E7", "E9", "F", "B"]
unfixable = ["B"]

[tool.ruff.format]
quote-style = "single"  # Always preferred `blue` quoting convention over `black`
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
markers = [
    "docs",
    "unit",
    "integration",
]

[tool.uv]
dev-dependencies = [
    "livereload>=2.7.0",
    "matplotlib>=3.9.2",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.2",
    "sphinx>=8.0.2",
    "tomli>=2.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
